--- a/Fletch_Framework/Fletch/Toolbar/PBToolbarWindowController.xib
+++ b/Fletch_Framework/Fletch/Toolbar/PBToolbarWindowController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14295.6"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,19 +12,19 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" titlebarAppearsTransparent="YES" id="BdS-Mo-Un0" customClass="NSPanel">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES" fullSizeContentView="YES"/>
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" id="BdS-Mo-Un0" customClass="NSPanel">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="1285" y="903" width="300" height="72"/>
+            <rect key="contentRect" x="1285" y="903" width="300" height="0.0"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <value key="minSize" type="size" width="100" height="72"/>
-            <value key="maxSize" type="size" width="1000" height="72"/>
+            <value key="minSize" type="size" width="100" height="0.0"/>
+            <value key="maxSize" type="size" width="1000" height="0.0"/>
             <view key="contentView" id="ERk-mW-m92">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="72"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="0.0"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <visualEffectView blendingMode="behindWindow" material="underWindowBackground" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="PZq-hY-RGf">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="72"/>
+                    <visualEffectView hidden="YES" blendingMode="behindWindow" material="underWindowBackground" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="PZq-hY-RGf">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="0.0"/>
                     </visualEffectView>
                 </subviews>
                 <constraints>
@@ -37,7 +37,7 @@
             <connections>
                 <outlet property="delegate" destination="-2" id="6yE-Ei-vpq"/>
             </connections>
-            <point key="canvasLocation" x="133" y="102"/>
+            <point key="canvasLocation" x="133" y="66.5"/>
         </window>
     </objects>
 </document>
