--- a/Fletch_Framework/Fletch/AddHistory/AddHistoryWindowController.xib
+++ b/Fletch_Framework/Fletch/AddHistory/AddHistoryWindowController.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14313.3.2" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaDFRPlugin" version="14214"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14295.6"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.3.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="the Touch Bar" minToolsVersion="8.1" minSystemVersion="10.12.2" requiredIntegratedClassName="NSTouchBar"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AddHistoryWindowController">
@@ -82,53 +81,6 @@ DQ
                                 <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="2D3-6s-fEl" customClass="PBUpdateNotesTextView">
                                     <rect key="frame" x="0.0" y="0.0" width="363" height="159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <touchBar key="touchBar" id="4jk-LB-RDb">
-                                        <touchBarItems>
-                                            <touchBarSpacerItem identifier="NSTouchBarItemIdentifierFlexibleSpace" id="IcO-l1-j4Z"/>
-                                            <touchBarItem id="0Wn-Xw-X8B">
-                                                <viewController key="viewController" id="bZP-Av-5Oa">
-                                                    <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Gzc-1v-bTS">
-                                                        <rect key="frame" x="0.0" y="0.0" width="72" height="30"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                        <buttonCell key="cell" type="push" title="今天" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vSN-6c-za0">
-                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                            <font key="font" usesAppearanceFont="YES"/>
-                                                        </buttonCell>
-                                                    </button>
-                                                </viewController>
-                                                <size key="designTimeSize" width="72" height="30"/>
-                                            </touchBarItem>
-                                            <touchBarItem id="VrK-1c-UjX">
-                                                <viewController key="viewController" id="XRk-wJ-c1M">
-                                                    <scrubber key="view" translatesAutoresizingMaskIntoConstraints="NO" id="Oa5-6G-Fha">
-                                                        <rect key="frame" x="0.0" y="0.0" width="517" height="30"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
-                                                        <scrubberProportionalLayout key="scrubberLayout"/>
-                                                    </scrubber>
-                                                </viewController>
-                                            </touchBarItem>
-                                            <touchBarItem identifier="PBDateScrubber" id="HyG-h5-GfH">
-                                                <viewController key="viewController" id="yPN-Rh-ZOt">
-                                                    <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SNX-4y-c1f">
-                                                        <rect key="frame" x="0.0" y="0.0" width="72" height="30"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                        <buttonCell key="cell" type="push" title="添加" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Wyu-Kw-WwP">
-                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                            <font key="font" usesAppearanceFont="YES"/>
-                                                            <string key="keyEquivalent" base64-UTF8="YES">
-DQ
-</string>
-                                                            <modifierMask key="keyEquivalentModifierMask" command="YES"/>
-                                                        </buttonCell>
-                                                        <connections>
-                                                            <action selector="addHistory:" target="-2" id="sW9-Dy-SYO"/>
-                                                        </connections>
-                                                    </button>
-                                                </viewController>
-                                                <size key="designTimeSize" width="72" height="30"/>
-                                            </touchBarItem>
-                                        </touchBarItems>
-                                    </touchBar>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <size key="minSize" width="363" height="159"/>
