--- a/Fletch_Framework/Fletch/AddHistory/AddHistoryWindowController.xib
+++ b/Fletch_Framework/Fletch/AddHistory/AddHistoryWindowController.xib
@@ -20,7 +20,7 @@
         <window title="添加更新记录" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" fullSizeContentView="YES"/>
             <rect key="contentRect" x="1092" y="634" width="480" height="299"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1050"/>
             <view key="contentView" wantsLayer="YES" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="299"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -53,7 +53,7 @@ DQ
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="60c-ag-Myb">
+                    <textField verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60c-ag-Myb">
                         <rect key="frame" x="340" y="239" width="120" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="120" id="yho-UF-VQj"/>
@@ -89,11 +89,11 @@ DQ
                                 </textView>
                             </subviews>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="bmh-gs-dxg">
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="bmh-gs-dxg">
                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.5" horizontal="NO" id="JgQ-GT-Ica">
+                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="0.5" horizontal="NO" id="JgQ-GT-Ica">
                             <rect key="frame" x="348" y="1" width="16" height="159"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
@@ -107,7 +107,7 @@ DQ
                         </textFieldCell>
                     </textField>
                     <datePicker verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pQg-KW-hJA">
-                        <rect key="frame" x="95" y="239" width="96" height="27"/>
+                        <rect key="frame" x="95" y="239" width="100" height="27"/>
                         <datePickerCell key="cell" borderStyle="bezel" alignment="left" id="ag0-if-FTh">
                             <font key="font" metaFont="system"/>
                             <date key="date" timeIntervalSinceReferenceDate="-595929600">
